modified ft-share-button scss and fixed color contrast issues

--- a/src/renderer/components/ft-share-button/ft-share-button.scss
+++ b/src/renderer/components/ft-share-button/ft-share-button.scss
@@ -41,6 +41,7 @@
 
     @at-root {
       .dark &,
+      .gruvboxDark &,
       .system[data-system-theme*='dark'] & {
         filter: brightness(0.868);
       }
@@ -53,6 +54,7 @@
 
       .pastelPink &,
       .light &,
+      .gruvboxLIght &,
       .system[data-system-theme*='light'] & {
         filter: invert(0.87);
       }
@@ -75,12 +77,14 @@
         .dracula &,
         .CatppuccinMocha &,
         .hotPink &,
+	.gruvboxDark &,
         .system[data-system-theme*='dark'] & {
           background-image: url('../../assets/img/invidious-logo-dark.svg');
         }
 
         .pastelPink &,
         .light &,
+	.gruvboxLight &,
         .system[data-system-theme*='light'] & {
           background-image: url('../../assets/img/invidious-logo-light.svg');
         }
