--- a/src/renderer/themes.css
+++ b/src/renderer/themes.css
@@ -279,8 +279,8 @@ it can be safely elided. This looks quite pleasant on this theme. */
   --bg-color: #1d2021;
   --favorite-icon-color: #fabd2f;
   --card-bg-color: #282828;
-  --secondary-card-bg-color: #282828;
-  --scrollbar-color: #32302f;
+  --secondary-card-bg-color: #458588;
+  --scrollbar-color: #ebdbb2;
   --scrollbar-color-hover: #504945;
   --side-nav-color: #282828;
   --side-nav-hover-color: #3c3836;
